# autokernel

./: .gitignore  CHANGELOG.md  KDA_OPTIMIZATION_REPORT.md  LICENSE  README.md  ab_test.py  analysis.py  bench.py  export_hf.py  orchestrate.py  prepare.py  profile.py  profile_jax.py  program.md  program_pallas.md  pyproject.toml  tpu_vm.py
cuda/: __init__.py  bench.py  extract.py  profiler.py  reference.py  verify.py
cuda/kernelbench/: __init__.py  bench_kb.py  bridge.py  program_kb.md  scorer.py
cuda/kernels/: __init__.py
cuda/kernels/native/: _compile.py  cross_entropy.py  flash_attention.py  fused_mlp.py  layernorm.py  matmul.py  reduce.py  rmsnorm.py  rotary_embedding.py  softmax.py
cuda/kernels/triton/: __init__.py  cross_entropy.py  flash_attention.py  fused_mlp.py  layernorm.py  matmul.py  reduce.py  rmsnorm.py  rotary_embedding.py  softmax.py
cuda/models/: __init__.py  bert_base.py  custom.py  gpt2.py  llama_7b.py
kernels/cuda/: cross_entropy.py  flash_attention.py
pallas/: __init__.py  bench.py  profiler.py
pallas/kernels/: __init__.py  gated_delta_attention.py  gated_delta_attention_assoc.py  gated_delta_attention_naive.py  matmul.py
pallas/models/: __init__.py  kimi_linear.py
tests/: test_bench_pallas_parser.py  test_profile_jax.py  test_tpu_vm.py
